--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-read this!!!!!!
+<!DOCTYPE html>
 
-and how about this
+<html>
 
-attempt number 3
+<head>
+    <meta charset = "utf-8">
+</head>
+
+<body>
+    <h1>Odin Recipes</h1>
+    <h2><a href = "recipes/breakfast.html">BREAKFAST</a></h2>
+</body>
+</html>
