--- a/recipes/breakfast.html
+++ b/recipes/breakfast.html
@@ -9,5 +9,19 @@
 <body>
     <h1>Breakfast</h1>
     <p> <img src = "breakki.webp"> </p>
+    <h2>Ingredients
+        <ul>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Tony Chachere's</li>
+            <li>Potatoes</li>
+            <li>Grease</li>
+            <li>Butter</li>
+            <li>Bacon</li>
+            <li>Eggs</li>
+            <li>Milk</li>
+            <li>Cheese</li>
+        </ul>
+    </h2>
 </body>
 </html>
